--- a/src/app/Livros/livros-lista/livros-lista.component.html
+++ b/src/app/Livros/livros-lista/livros-lista.component.html
@@ -1,16 +1,16 @@
-<mat-accordion *ngIf="livros.length > 0">
-    <mat-expansion-panel *ngFor="let livros of livros">
+<mat-accordion *ngIf="Notas.length > 0">
+    <mat-expansion-panel *ngFor="let notas of notas">
         <mat-expansion-panel-header>
-            <p>Titulo: {{ livros.titulo}}</p>
+            <p>Titulo: {{ notas.titulo}}</p>
         </mat-expansion-panel-header>
-            <p>Author: {{ livros.autor}}</p>
-            <p>Número de Páginas: {{ livros.paginas }}</p>
+            <p>Author: {{ notas.descricao}}</p>
+            <p>Número de Páginas: {{ notas.data }}</p>
             <mat-action-row>
                 <button mat-button color='primary'>Editar</button>
                 <button mat-button color='warn'>Remover</button>
             </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
-<p class="mat-body-1" style="text-align: center;" *ngIf="livros.length <= 0">
-    Nenhum cliente cadastrado
+<p class="mat-body-1" style="text-align: center;" *ngIf="Notas.length <= 0">
+    Nenhuma nota cadastrada
 </p>
